# opencct

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
src/: distributions.rs  lib.rs  math.rs  test_utils.rs  time.rs
src/distributions/: algorithms.rs  beta.rs  composite.rs  exponential.rs  gamma.rs  lognormal.rs  normal.rs  pareto.rs  triangular.rs  uniform.rs  weibull.rs
src/distributions/algorithms/: box_muller.rs  marsaglia_tsang.rs  zignor.rs
