[package]
name = "opencct"
version = "0.1.0"
edition = "2024"
authors = ["Julián Marrades <julian@marrad.es>"]
description = "Utilities for Call Center simulation and optimal staffing."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jCodingStuff/opencct"
documentation = "https://docs.rs/opencct"
keywords = ["call", "center", "simulation", "staffing", "optimization"]
categories = ["algorithms", "simulation", "mathematics"]
readme = "README.md"

[dependencies]
fast_inv_sqrt = "1.0.1"
libm = "0.2.15"
once_cell = "1.21.3"
rand = "0.9.2"

[features]
default = ["f64"]
f32 = []
f64 = []
